Sorts up the showcase area and about area

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ header a:hover {
 }
 
 #branding {
-    font-size: 16px;
+    font-size: 130%;
 }
 
 .nav-container {
@@ -67,7 +67,9 @@ header a:hover {
     padding: 0 20px 0 20px;
 }
 
-
+#lang {
+    font-size: 130%;
+}
 /* ================================================================================
 Showcase
 ================================================================================ */
@@ -94,4 +96,23 @@ Showcase
 
 /* ================================================================================
 About
+================================================================================ */
+
+.about-container {
+    display: flex;
+    flex-direction: row;
+    margin: 50px 0 50px 0;
+}
+
+#about-pic img {
+    max-height: 500px;
+    margin: 10px;
+}
+
+#about-description {
+}
+
+
+/* ================================================================================
+Boxes
 ================================================================================ */
