--- a/css/main.css
+++ b/css/main.css
@@ -141,4 +141,10 @@ nav p {
     background: url(../img/showcase.jpg) no-repeat;
     background-size: 100%;
     height: 500px;
+    color: #ffffff;
 }
+
+figure img {
+    width: 100%;   
+}
+
