--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,10 @@
 /* Globalt */
 
 body {
-    /* font: 15px/1.5 Arial, Helvetica, sans-serif; */
-    font-family: 'Barlow Condensed', sans-serif;
+    /* font-family: 'Barlow Condensed', sans-serif; */
+    font-family: 'Open Sans Condensed', sans-serif;
     font-size: 15px;
+    color: #f2f2f2;
     padding: 0;
     margin: 0;
     background-color: #f4f4f4;
@@ -16,6 +17,10 @@ ul {
     list-style-type: none;
 }
 
+h2 {
+    font-size: 30px;
+}
+
 /* ================================================================================
 Showcase Navigation
 ================================================================================ */
@@ -26,7 +31,6 @@ Showcase Navigation
 
 .nav-container {
     /* background: #35424a; */
-    color: #ffffff;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -45,7 +49,7 @@ Showcase Navigation
 }
 
 .nav-container a {
-    color: #ffffff;
+    color:#f2f2f2;
     text-decoration: none;
     /* text-transform: uppercase; */
     font-size: 16px;
@@ -53,7 +57,7 @@ Showcase Navigation
 }
 
 .nav-container a:hover {
-    color: #cccccc;
+    color: #b3b3b3;
     /* font-weight: bold; */
 }
 
@@ -78,37 +82,40 @@ Showcase Main Area
 
 #showcase {
     display: flex;
+    justify-content: center;
     flex-direction: column;
     min-height: 800px;
-    background: url("../img/ambient-showcase.jpg") no-repeat 0 0px;
+    background: url("../img/showcase.jpg") no-repeat 0 0px;
     background-size: cover;
+    background-position: center;
     text-align: center;
-    color: #ffffff;
 }
 
 .showcase-container h1 {
     /* background: blue; */
     text-align: center;
-    /* margin-top: 5%; */
-    font-size: 55px;
-    /* margin-bottom: 5%; */
-    margin: 5%;
+    margin-top: 5%;
+    font-size: 155px;
+    margin-bottom: 1%;
 }
 
-.showcase-container p {
+.showcase-container h2 {
     /* background: red; */
-    text-align: center;
-    font-size: 20px;
-    margin: 5%;
+    font-size: 55px;
+    margin-top: 1%;
+    margin-bottom: 5%;
 }
 
 .scroll-container {
     /* margin: auto 5% 10px 5%; */
     /* background: yellow; */
     margin-top: auto;
-    margin-bottom: 7%;
+    margin-bottom: 3%;
 }
 
+.scroll-container p {
+    margin-top: 5px;
+}
 
 /* ================================================================================
 Boxes
@@ -119,6 +126,7 @@ Boxes
     flex-direction: row-reverse;
     text-align: center;
     padding: 3%;
+    color:#737373;
 }
 
 .box {
@@ -160,7 +168,9 @@ Projects
 ================================================================================ */
 
 #projects {
-    background: lightgrey;
+    /* background:#e6e6e6; */
+    background: #d9d9d9;
+    color:#737373;
 }
 
 #project1 {
@@ -169,10 +179,6 @@ Projects
     flex-direction: row-reverse;
     margin: 0 10%;
     padding: 30px 0;
-}
-
-#project1-textarea {
-    /* background: red; */
 }
 
 #project1-textarea h2 {
@@ -193,22 +199,47 @@ Projects
 
 
 /* ================================================================================
-Contact
+Portfolio
 ================================================================================ */
 
 #portfolio-container {
-    background: blue;
+    display: flex;
+    flex-direction: column;
+    padding: 3%;
+    color:#737373;
 }
 
+#portfolio-description {
+    text-align: center;
+}
+
+#portfolio-icons {
+    text-align: center;
+    font-size: 400%;
+}
+
+#portfolio-icons i {
+    color:#737373;
+    padding: 2%;
+}
 
 /* ================================================================================
 Contact
 ================================================================================ */
 
 #contact {
-    color: #ffffff;
-    background: black;
+    color: #b3b3b3;
+    background: #333333;
     padding: 50px;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+#contact h2 {
+    font-size: 16px;
+}
+
+#contact i {
+    font-size: 350%;
 }
