--- a/css/mediaq.css
+++ b/css/mediaq.css
@@ -77,7 +77,7 @@
         /* margin: auto 5% 10px 5%; */
         /* background: yellow; */
         margin-top: auto;
-        margin-bottom: 65%;
+        margin-bottom: 300px;
         color: #333333; 
     }
 
@@ -103,4 +103,12 @@
         margin-right: 0px;
     }
 
+    #project1-read-more {
+        flex-direction: column;
+        padding-left: 0;
+    }
+
+    #project1-read-more i {
+        font-size: 300%;
+    }
 }
