--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@ h2 {
     font-size: 30px;
 }
 
+i {
+    /* position: absolute; */
+}
+
 /* ================================================================================
 Showcase Navigation
 ================================================================================ */
