Cleans and validates the code

--- a/css/animations.css
+++ b/css/animations.css
@@ -1,22 +1,3 @@
-
-/* ================================================================================
-Showcase Main Area
-================================================================================ */
-
-/* site-nav-button */
-
-.change #bar1 {
-    transform: rotate(315deg) translate(-9px, 6px);
-}
-
-.change #bar2 {
-    transform: translateY(20px);
-}
-
-.change #bar3 {
-    transform: rotate(-315deg) translate(-8px, -8px);
-}
-
 /* arrow-down */
 
 .fa-angle-down {
@@ -29,10 +10,6 @@ Showcase Main Area
     to {transform: translateY(0px)}
 }
 
-.fa-github {
+.fa-github, .fa-linkedin, .fa-envelope-o {
     transition: 0.5s ease;
-}
-
-.fa-github:hover {
-    transform: scale(1.1);
 }
