--- a/css/mediaq.css
+++ b/css/mediaq.css
@@ -1,76 +1,24 @@
 @media only screen and (max-width: 990px) {
 
-    #logo, .site-nav {
-        display: none;
-    }
-
-    .site-nav-button {
-        display: inline-block;
-        text-align: center;
-        /* flex-direction: row; */
-        /* justify-content: flex; */
-    }
-
-    #selections i {
-        font-size: 170%;
-        padding: 10px;
-    }
-
     .arrow-down {
-        /* margin-top: auto; */
         margin-bottom: 50px;
     }
 
     .about-container {
-        /* display: flex; */
         flex-direction: column;
-        /* margin: 50px 0 50px 0; */
     }
-
-    #about-pic img {
-        height: 100%;
-        width: 100%;
-    }
-
-
-    .box-container {
-        /* display: flex; */
-        flex-direction: column-reverse;
-        /* text-align: center; */
-    }
-
-    .box img {
-        max-width: 40%;
-    }
-
-    #about-pic {
-        display: flex;
-        justify-content: center;
-    }
-
 }
 
 /* =========================================================== */
 
 @media only screen and (max-width: 700px) {
-    #selections i {
-        font-size: 170%;
-        padding: 10px;
-    }
-    
+   
     .showcase-container h1 {
-        /* background: blue; */
-        /* text-align: center; */
-        /* margin-top: 5%; */
         font-size: 80px;
-        /* margin-bottom: 1%; */
     }
 
     .showcase-container h2 {
-        /* background: red; */
         font-size: 35px;
-        /* margin-top: 1%; */
-        /* margin-bottom: 5%; */
     }
 
     .timer-to-hire {
@@ -78,23 +26,15 @@
     }
 
     .arrow-down {
-        /* margin: auto 5% 10px 5%; */
-        /* background: yellow; */
-        /* margin-top: auto; */
         margin-bottom: 50px;
     }
 
     .box-container {
-        padding: 10%;
+        padding: 5%;
     }
 
     .about-container {
         text-align: center;
-    }
-
-    #about-pic img {
-        height: 100%;
-        width: 100%;
     }
 
     #project1 {
@@ -104,6 +44,10 @@
 
     #project1 img {
         margin-right: 0px;
+    }
+
+    #project1-textarea h2 {
+        display: none;
     }
 
     #project1-read-more {
